<resources>
    <string name="app_name">mjramMobile</string>
    <!--strings login-->
    <string name="txt_email">Insira o email</string>
    <string name="txt_password">Insira a password</string>
    <string name="txt_Email_invalido">Email invalido</string>
    <string name="txt_pass_invalida">Password invalida</string>
    <!--strings aviao-->
    <string name="col1">Lista Aviões</string>
    <string name="header_Lista_aviao">Lista de aviao</string>
    <string name="Detalhes_aviao">Detalhes do Avião</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_aviao">Lista Avião</string>
    <string name="lista_tarefas">Lista Tarefas</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="designacao">Designação:</string>
    <string name="hangar">Hangar:</string>
    <string name="recurso">Recurso:</string>
    <string name="estado">Estado:</string>
    <string name="detalhes_tarefa">Detalhes Tarefa</string>
    <string name="data_inicio">Data Início:</string>
    <string name="data_final">Data Final:</string>
    <string name="data_registo">Data Registo:</string>
    <string name="perfil">Detalhes Perfil</string>
    <string name="email">Email:</string>
    <string name="nib">NIB:</string>
    <string name="telemovel">Telemovel:</string>

    <string-array name="estados">
        <item>concluido</item>
        <item>planeada</item>
        <item>cancelado</item>
    </string-array>
</resources>