<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.DetalhesTarefaFragment">

    <TableRow
        android:clickable="false"
        android:background="@drawable/table_detalhes_cima"
        >
        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/detalhes_tarefa"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>
    </TableRow>
    <TableRow android:background="@drawable/table_detalhes_meio">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/designacao"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_designacao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="Fazer hamburgueres"
            android:textSize="15sp"/>

    </TableRow>
    <TableRow android:background="@drawable/table_detalhes_meio">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/estado"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_estado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="Concluido"
            android:textSize="15sp"/>
    </TableRow>

    <TableRow android:background="@drawable/table_detalhes_meio">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/recurso"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_Recurso"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="fazer hamburgueres"
            android:textSize="15sp"/>
    </TableRow>
    <TableRow android:background="@drawable/table_detalhes_baixo">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/hangar"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_hangar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="hangar 3"
            android:textSize="15sp"/>
    </TableRow>
    <TableRow android:background="@drawable/table_detalhes_baixo">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/data_registo"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_registo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="hangar 3"
            android:textSize="15sp"/>
    </TableRow>
    <TableRow android:background="@drawable/table_detalhes_baixo">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/data_inicio"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_inicio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="hangar 3"
            android:textSize="15sp"/>
    </TableRow>
    <TableRow android:background="@drawable/table_detalhes_baixo">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8sp"
            android:text="@string/data_final"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/tv_tarefa_final"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8sp"
            android:textColor="@color/black"
            android:text="hangar 3"
            android:textSize="15sp"/>
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_weight="0.1" />

    <Button
        android:id="@+id/btnListaTarefas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:backgroundTint="@color/dourado_icon"
        android:text="Back"
        android:textColor="@android:color/white" />

</TableLayout>